--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ hs_err_pid*
 /Aula02HelloWorld/dist/
 /Aula03JavaEEServlets/nbproject/private/
 /Aula03JavaEEServlets/build/
+/Aula03MathServlet/nbproject/private/
+/Aula03MathServlet/build/
