--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ hs_err_pid*
 /Aula03JavaEEServlets/build/
 /Aula03MathServlet/nbproject/private/
 /Aula03MathServlet/build/
+/Aula04Servlet/nbproject/private/
+/Aula04Servlet/build/
