--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ hs_err_pid*
 /Aula03MathServlet/build/
 /Aula04Servlet/nbproject/private/
 /Aula04Servlet/build/
+/Aula05JavaEEJSP/nbproject/private/
+/Aula05JavaEEJSP/dist/
+/Aula05JavaEEJSP/build/
