--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ hs_err_pid*
 /Aula05JavaEEJSP/build/
 /Aula05CalendarioJSP/nbproject/private/
 /Aula05CalendarioJSP/build/
+/Aula06JSPDiretivas/nbproject/private/
+/Aula06JSPDiretivas/build/
+/Aula06JSPDiretivasTarefa6.1/nbproject/private/
+/Aula06JSPDiretivasTarefa6.1/build/
