--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ hs_err_pid*
 /Aula06JSPDiretivas/build/
 /Aula06JSPDiretivasTarefa6.1/nbproject/private/
 /Aula06JSPDiretivasTarefa6.1/build/
+/Aula07Context/nbproject/private/
+/Aula07Context/build/
+/Aula07Session/nbproject/private/
+/Aula07Session/build/
+/Tarefa7.1ControleDeAcesso/nbproject/private/
+/AvaliacaoP1MaxWendell/nbproject/private/
+/AvaliacaoP1MaxWendell/build/
