--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ hs_err_pid*
 /Tarefa7.1ControleDeAcesso/nbproject/private/
 /AvaliacaoP1MaxWendell/nbproject/private/
 /AvaliacaoP1MaxWendell/build/
+/Aula11POO/nbproject/private/
+/Aula11POO/build/
